// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NowPlayingCard > matches snapshot when paused 1`] = `
<a
  aria-label="Open in Spotify: Test Track"
  class="group block overflow-hidden rounded-ue-xl border border-[color:color-mix(in_srgb,var(--page-text)_12%,transparent)] bg-[color:color-mix(in_srgb,var(--card-bg)_96%,transparent_4%)] p-4 text-page-foreground shadow-surface backdrop-blur-xl transition-[transform,box-shadow,border-color] duration-300 ease-out hover:-translate-y-[2px] hover:border-[color:color-mix(in_srgb,var(--page-text)_26%,transparent)] hover:shadow-surface-strong focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[color:var(--nav-link)]"
  href="https://open.spotify.com/track/play-1"
  rel="noopener noreferrer"
  tabindex="0"
  target="_blank"
>
  <div
    class="grid grid-cols-[auto,1fr] items-center gap-4"
  >
    <div
      class="relative h-16 w-16 overflow-hidden rounded-ue-lg shadow-surface-strong"
    >
      <img
        alt="Album"
        class="h-full w-full object-cover transition-transform duration-[1200ms] ease-[cubic-bezier(.22,.61,.36,1)] group-hover:scale-[1.03]"
        decoding="async"
        loading="lazy"
        referrerpolicy="no-referrer"
        src="https://example.com/cover.jpg"
      />
    </div>
    <div
      aria-live="polite"
      class="min-w-0 space-y-2"
    >
      <p
        class="truncate font-display text-[clamp(1rem,2.1vw,1.15rem)] font-extrabold tracking-tight"
      >
        Test Track
      </p>
      <p
        class="truncate text-sm text-[color:var(--secondary-text)]"
      >
        Tester
      </p>
      <span
        aria-hidden="true"
        class="inline-flex items-center justify-center gap-1 font-semibold tracking-tight transition-colors duration-200 ease-out rounded-ue-pill min-h-6 px-2 text-[0.7rem] border border-[color:rgba(59,130,246,0.4)] text-[color:rgba(37,99,235,0.95)] bg-transparent uppercase tracking-[0.18em]"
      >
        <span
          class="leading-none"
        >
          Paused
        </span>
      </span>
      <div
        class="flex items-center gap-3"
      >
        <div
          aria-label="Track progress"
          aria-live="polite"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="16.666666666666664"
          class="relative h-2.5 w-full overflow-hidden rounded-ue-pill bg-progress-track"
          role="progressbar"
        >
          <div
            class="h-full rounded-ue-pill bg-progress-bar transition-[width] duration-300 ease-out motion-reduce:transition-none"
            style="width: 16.666666666666664%;"
          />
        </div>
        <p
          class="shrink-0 text-xs font-semibold text-[color:var(--secondary-text)]"
        >
          0:30
           / 
          3:00
        </p>
      </div>
    </div>
  </div>
</a>
`;

exports[`NowPlayingCard > matches snapshot when playing 1`] = `
<a
  aria-label="Open in Spotify: Test Track"
  class="group block overflow-hidden rounded-ue-xl border border-[color:color-mix(in_srgb,var(--page-text)_12%,transparent)] bg-[color:color-mix(in_srgb,var(--card-bg)_96%,transparent_4%)] p-4 text-page-foreground shadow-surface backdrop-blur-xl transition-[transform,box-shadow,border-color] duration-300 ease-out hover:-translate-y-[2px] hover:border-[color:color-mix(in_srgb,var(--page-text)_26%,transparent)] hover:shadow-surface-strong focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[color:var(--nav-link)]"
  href="https://open.spotify.com/track/play-1"
  rel="noopener noreferrer"
  tabindex="0"
  target="_blank"
>
  <div
    class="grid grid-cols-[auto,1fr] items-center gap-4"
  >
    <div
      class="relative h-16 w-16 overflow-hidden rounded-ue-lg shadow-surface-strong"
    >
      <img
        alt="Album"
        class="h-full w-full object-cover transition-transform duration-[1200ms] ease-[cubic-bezier(.22,.61,.36,1)] group-hover:scale-[1.03]"
        decoding="async"
        loading="lazy"
        referrerpolicy="no-referrer"
        src="https://example.com/cover.jpg"
      />
    </div>
    <div
      aria-live="polite"
      class="min-w-0 space-y-2"
    >
      <p
        class="truncate font-display text-[clamp(1rem,2.1vw,1.15rem)] font-extrabold tracking-tight"
      >
        Test Track
      </p>
      <p
        class="truncate text-sm text-[color:var(--secondary-text)]"
      >
        Tester
      </p>
      <div
        class="flex items-center gap-3"
      >
        <div
          aria-label="Track progress"
          aria-live="polite"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="16.666666666666664"
          class="relative h-2.5 w-full overflow-hidden rounded-ue-pill bg-progress-track"
          role="progressbar"
        >
          <div
            class="h-full rounded-ue-pill bg-progress-bar transition-[width] duration-300 ease-out motion-reduce:transition-none"
            style="width: 16.666666666666664%;"
          />
        </div>
        <p
          class="shrink-0 text-xs font-semibold text-[color:var(--secondary-text)]"
        >
          0:30
           / 
          3:00
        </p>
      </div>
    </div>
  </div>
</a>
`;
